--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ds18b20-raspi": "^0.3.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
