--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "helmet": "^6.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mqtt": "^4.3.7"
+    "mqtt": "^4.3.7",
+    "onoff": "^6.0.3",
+    "socket.io": "^4.5.4"
   }
 }
